# docbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml  publish.yaml
docbox/: __init__.py  bounding_box.py
docbox/tests/: test_bounding_box.py
