[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "docbox"
author = "Thomas Corcoran"
author-email = "chasecorcoran@gmail.com"
home-page = "https://github.com/tccorcoran/docbox"
description-file="README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.metadata.requires-extra]
dev = [
  "pytest",
  "pre-commit"
]

[tool.isort]
profile = "black"